# solana-security-patterns

./: .gitignore  Anchor.toml  README.md  package.json  solana_past_hacks.txt  solana_security_guide.txt  tsconfig.json
programs/01_missing_account_validation/: Cargo.toml  README.md
programs/01_missing_account_validation/src/: lib.rs
programs/01_missing_account_validation/tests/: exploit.ts
programs/02_missing_authority_check/: Cargo.toml  README.md
programs/02_missing_authority_check/src/: lib.rs
programs/02_missing_authority_check/tests/: exploit.ts
programs/03_incorrect_pda_derivation/: Cargo.toml  README.md
programs/03_incorrect_pda_derivation/src/: lib.rs
programs/03_incorrect_pda_derivation/tests/: exploit.ts
programs/04_unsafe_cpi_token_transfer/: Cargo.toml  README.md
programs/04_unsafe_cpi_token_transfer/src/: lib.rs
programs/04_unsafe_cpi_token_transfer/tests/: exploit.ts
programs/05_integer_overflow_state_bug/: Cargo.toml  README.md
programs/05_integer_overflow_state_bug/src/: lib.rs
programs/05_integer_overflow_state_bug/tests/: exploit.ts
tests/: utils.ts
