[package]
name = "missing-account-validation"
version = "0.1.0"
description = "Educational demo of missing account validation vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_account_validation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
