[package]
name = "incorrect-pda-derivation"
version = "0.1.0"
description = "Educational demo of incorrect PDA derivation vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incorrect_pda_derivation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
