[package]
name = "unsafe-cpi-token-transfer"
version = "0.1.0"
description = "Educational demo of unsafe CPI token transfer vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unsafe_cpi_token_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
